From 9fc66a8 (closure-adv):
==========================

In setup.py,

(*) Indicate matplotlib version to be < 3.0 in install_requires and
setup_requires

From aaf29f9 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Major updates to member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum. Now computes under three data pools, namely,
"whole", "submodel", and "residual". Docstring yet to be updated.

From f099889 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Minor update in member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum

From bb0ef3c (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Update docstring of member function FT() of class
ClosurePhaseDelaySpectrum

From 708a945 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Remove comments in member function FT() of class
ClosurePhaseDelaySpectrum

From 817f6a7 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Modify member function FT() of class ClosurePhaseDelaySpectrum
to compute delay spectrum of subtract model and residuals.

From 0cf9822 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) Add member function subtract() along with docstring under class
ClosurePhase. Update class docstring accordingly

From 8668be2 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function save() of class ClosurePhase, fix bug by
adding self as the first argument for the function inputs.

From da67b42 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in removal of entries in
diagoffsets when avgcov is applied

From 1ce14c6 (closure-adv):
==========================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class